add react to skills

--- a/src/components/staticProjectData.json
+++ b/src/components/staticProjectData.json
@@ -43,6 +43,10 @@
       "icon": "https://www.dropbox.com/s/xmirhrh5hv7ai1g/css.png?raw=1"
     },
     {
+      "skill": "Reactjs/Redux",
+      "icon": "https://www.dropbox.com/s/3kinvupgu341kfh/react.png?raw=1"
+    },
+    {
       "skill": "JavaScript (ES6+)",
       "icon": "https://www.dropbox.com/s/2uvkvgwqg6m6bwp/javascript.png?raw=1"
     },
