--- a/src/components/staticProjectData.json
+++ b/src/components/staticProjectData.json
@@ -86,7 +86,7 @@
     },
     {
       "src": "https://www.dropbox.com/s/fhnlxwih1j8cjvu/ada.jpg?raw=1",
-      "caption": "ADA"
+      "caption": "ADA Nagerian"
     },
 
     {
